wnfs/src/public/snapshots/wnfs__public__directory__snapshot_tests__directory_with_children.snap
---
source: wnfs/src/public/directory.rs
expression: dir
---
{
  "cid": "bafyr4ienz6vbjac4c3izimtfccu56denasxijdlxtivnzr6bcccij47i2q",
  "value": {
    "wnfs/pub/dir": {
      "metadata": {
        "created": 0,
        "modified": 0
      },
      "previous": [],
      "userland": {
        "music": {
          "/": "bafyr4iguzfbscuempj6k4ixjkjoezxl7w2bvpa3dussgtovh3uujrm2xam"
        },
        "text.txt": {
          "/": "bafyr4ibjz7atflofvn5i6f7li3djshlrgcu56cwgceetvzokvu26pekxoy"
        },
        "videos": {
          "/": "bafyr4ihwxcdcoc36v7o6mkmpsmomiz5m3d3dbwvrixpirwr3vgdxrq2nue"
        }
      },
      "version": "1.0.0"
    }
  },
  "bytes": "oWx3bmZzL3B1Yi9kaXKkZ3ZlcnNpb25lMS4wLjBobWV0YWRhdGGiZ2NyZWF0ZWQAaG1vZGlmaWVkAGhwcmV2aW91c4BodXNlcmxhbmSjZW11c2lj2CpYJQABcR4g1MlDIVCMenyuIulSXEzdf7aDV4NjpKRpuqfdKJizVwNmdmlkZW9z2CpYJQABcR4g9riGJwt+r93mKY+THMRnrNj2MNqxRd6I2juph3jDTaFodGV4dC50eHTYKlglAAFxHiApz8EyrcWreo8X60bGmR1xMKnfCsYRCTrlyq0155FXdg=="
}
