wnfs/src/public/snapshots/wnfs__public__directory__snapshot_tests__directory_with_previous_links.snap
---
source: wnfs/src/public/directory.rs
expression: dir
---
{
  "value": {
    "wnfs/pub/dir": {
      "metadata": {
        "created": 0,
        "modified": 0
      },
      "previous": [
        {
          "/": "bafyr4ih3k2ipwwqryrlmtmwtolma4t772gknmx7pxqu5opjwsrr2nc27qq"
        }
      ],
      "userland": {
        "music": {
          "/": "bafyr4iguzfbscuempj6k4ixjkjoezxl7w2bvpa3dussgtovh3uujrm2xam"
        },
        "text.txt": {
          "/": "bafyr4ibjz7atflofvn5i6f7li3djshlrgcu56cwgceetvzokvu26pekxoy"
        },
        "videos": {
          "/": "bafyr4ihwxcdcoc36v7o6mkmpsmomiz5m3d3dbwvrixpirwr3vgdxrq2nue"
        }
      },
      "version": "1.0.0"
    }
  },
  "bytes": "oWx3bmZzL3B1Yi9kaXKkZ3ZlcnNpb25lMS4wLjBobWV0YWRhdGGiZ2NyZWF0ZWQAaG1vZGlmaWVkAGhwcmV2aW91c4HYKlglAAFxHiD7VpD7WhHEVsmy03LYDk//0ZTWX++8Kdc9NpRjpotfhGh1c2VybGFuZKNlbXVzaWPYKlglAAFxHiDUyUMhUIx6fK4i6VJcTN1/toNXg2OkpGm6p90omLNXA2Z2aWRlb3PYKlglAAFxHiD2uIYnC36v3eYpj5McxGes2PYw2rFF3ojaO6mHeMNNoWh0ZXh0LnR4dNgqWCUAAXEeICnPwTKtxat6jxfrRsaZHXEwqd8KxhEJOuXKrTXnkVd2"
}
